Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4892

Wrong metrics for proxy.process.http.current_active_client_connections

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • 6.2.0
    • 6.2.1, 7.0.0
    • Metrics, Network
    • None

    Description

      On Docs, running current 7.0.x branch, I'm seeing e.g.

      proxy.process.http.current_client_connections 1
      proxy.process.http.current_active_client_connections 14994
      

      This continues to grow indefinitely (but we crash pretty often, so resets).

      Attachments

        Issue Links

          Activity

            People

              shinrich Susan Hinrichs
              zwoop Leif Hedstrom
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m