TS-4892: Wrong metric for proxy.process.http.current_active_client_connections. (cherry picked from commit 2bbb4ed729e00cf40e07b9ca7868f06217b037da)

Conflicts:
	proxy/ProxyClientTransaction.cc